syntax = "proto3";
package book;

option go_package="internal/pb/books";

service BookService{
    rpc GetBooks(Empty) returns (Books);
    rpc GetBook(Id) returns(Book);
    rpc PostBorrows(Ids)returns(StockJournals);
    rpc PostReturns(Ids)returns(StockJournals);
}

message Empty{};

message Books{
    repeated uint64 book_ids=2;
    repeated Book book=1;
}
message Book{
    uint64 id=1;
    string title=2;
    string isbn=3;
    string description =4;
    repeated int64 author_id=5;
    repeated int64 category_id=6;
    repeated BookItem book_item =7;
    uint64 stock=8;
    string created_at =9;
    string updated_at=10;
    string deleted_at=11;
}

message BookItem{
    uint64 id =1;
    uint64 book_id=2;
    string status=3;
}

message StockJournal{
    uint64 id=1;
    uint64 item_id=2;
    string status=3;
    uint64 user_id=4;
    string created_at =5;
    string updated_at=6;
    string deleted_at=7;
}
message StockJournals{
    repeated StockJournal stock_journal=1;
}

message Id {
    uint64 Id=1;
}

message Ids {
    repeated uint64 id=1;
}

message Status{
    string status=1;
}